--- a/views/CoinsIndex.pug
+++ b/views/CoinsIndex.pug
@@ -5,5 +5,7 @@ block content
   p Welcome to #{title}
 
 ul
-  each val in rows
-      li= val.name
+  each coin in coins
+      a(href='/' + coin.name) #{coin.name}
+      |
+      |
