De-conflated API and WEB routes

--- a/views/CoinsIndex.pug
+++ b/views/CoinsIndex.pug
@@ -8,5 +8,5 @@ dl
 each coin in coins
   dd
       |
-      a(href='/' + coin.name) #{coin.name}
+      a(href='/web/' + coin.name) #{coin.name}
       |
