--- a/views/SnapshotIndex.pug
+++ b/views/SnapshotIndex.pug
@@ -8,5 +8,5 @@ dl
 each snap in snaps
     dd
         |
-        a(href='/' + coin + '/' + snap.ID) #{snap.dateCreated}
+        a(href='/web/' + coin + '/' + snap.ID) #{snap.dateCreated}
         |
