--- a/views/SnapshotDetail.pug
+++ b/views/SnapshotDetail.pug
@@ -6,7 +6,7 @@ block content
 
 dl
     dt="Symbol"
-    dd=details.symbol
+    dd=details.symbol_safe
     dt="Price"
     dd=details.price
     dt="Change"
